# tp-taller2-ms-metrics

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: db.py  main.py
tests/: test_main.py
